--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./script/script.js"></script>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body onclick="alo_mundo()">
     <header class="barra_superior">
