--- a/calculadora_simples.html
+++ b/calculadora_simples.html
@@ -5,33 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Simples</title>
-    <script src="./script/script.js"></script>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
+    <script src="script/script.js"></script>
 </head>
 <body>
     <section class="calc_simples">
-       <div class="display_simples">
-        <input readonly id = "resultado" type="text" value = "0">
-       </div>
-       <div class="btn">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button class="num">&#247;</button>
-        <button class="num">x</button>
-        <button class="num">.</button>
-        <button class="num">+</button>
-        <button class="num">-</button>
-        <button id="igual" onclick="calcular()">=</button>
-    
-       </div>
+        <div class="display">
+            <input readonly id="resultado" type="text" value="0">
+        </div>
+        <div class="btn">
+            <button onclick="digitando('7')">7</button>
+            <button onclick="digitando('8')">8</button>
+            <button onclick="digitando('9')">9</button>
+            <button onclick="operacao('div')">&#247;</button>
+            <button onclick="digitando('4')">4</button>
+            <button onclick="digitando('5')">5</button>
+            <button onclick="digitando('6')">6</button>
+            <button onclick="operacao('mult')">x</button>
+            <button onclick="digitando('1')">1</button>
+            <button onclick="digitando('2')">2</button>
+            <button onclick="digitando('3')">3</button>
+            <button onclick="operacao('sub')">-</button>
+            <button onclick="digitando('.')">.</button>
+            <button onclick="digitando('0')">0</button>
+            <button onclick="operacao('soma')">+</button>
+            <button id="igual" onclick="calcular()">=</button>
+        </div>
     </section>
 </body>
 </html>
