--- a/calculadora_simples.html
+++ b/calculadora_simples.html
@@ -14,6 +14,11 @@
             <input readonly id="resultado" type="text" value="0">
         </div>
         <div class="btn">
+            <button onclick="desliga()">ON</button>
+            <button onclick="zerar()">C</button>
+            <button onclick="operacao('porc')">%</button>
+            <button onclick="operacao('raiz')">&radic;</button>
+            
             <button onclick="digitando('7')">7</button>
             <button onclick="digitando('8')">8</button>
             <button onclick="digitando('9')">9</button>
