--- a/grau2.html
+++ b/grau2.html
@@ -9,16 +9,28 @@
 <body>
     <section class="segundo_grau"></section>
     <div>
-    <input class = "variavel" type="text"><span> x </span>
-    <input class = "variavel" type="text"> <span> x </span> 
+        <select name="" id="">
+            <option value="+">+</option>
+            <option value="-">-</option>
+        </select>
+    <input class = "variavel" type="text"><span> x <sup>2</sup></span>
+    <select name="" id="">
+        <option value="+">+</option>
+        <option value="-">-</option>
+    </select>
+    <input class = "variavel" type="text"><span> x </span> 
+    <select name="" id="">
+        <option selected value="+">+</option>
+        <option value="-">-</option>
+    </select>
     <input class = "variavel" type="text"><span> = 0 </span>
 </div>
     <div>
-        <span>Delta = </span>
+        <span id="delta">Delta = </span>
     </div>
     <div> 
-        <span>x</span>
-        <span>x</span>
+        <span id="x1">x <sub>1</sub></span>
+        <span id="x2">x <sub>2</sub></span>
     </div>
 </body>
 </html>
