--- a/grau2.html
+++ b/grau2.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equação de Segundo Grau</title>
+    <script src="./script/script.js"></script>
+    <link rel="stylesheet" href="./css/grau2.css">
 </head>
 <body>
     <section class="segundo_grau"></section>
@@ -26,11 +28,11 @@
     <input class = "variavel" type="text"><span> = 0 </span>
 </div>
     <div>
-        <span id="delta">Delta = </span>
+        <span>&Delta; = </span>
     </div>
     <div> 
-        <span id="x1">x <sub>1</sub></span>
-        <span id="x2">x <sub>2</sub></span>
+        <span>x<sup>'</sup> = </span> 
+        <span>x<sup>''</sup> = </span> 
     </div>
 </body>
 </html>
