--- a/grau2.html
+++ b/grau2.html
@@ -11,28 +11,34 @@
 <body>
     <section class="segundo_grau"></section>
     <div>
-        <select name="" id="">
-            <option value="+">+</option>
-            <option value="-">-</option>
-        </select>
-    <input class = "variavel" type="text"><span> x <sup>2</sup></span>
-    <select name="" id="">
-        <option value="+">+</option>
-        <option value="-">-</option>
-    </select>
-    <input class = "variavel" type="text"><span> x </span> 
-    <select name="" id="">
+
+       <select name="sinal_a" onchange = "set_sinal_a()" id="sinal_a">
         <option selected value="+">+</option>
-        <option value="-">-</option>
-    </select>
-    <input class = "variavel" type="text"><span> = 0 </span>
+        <option value="+">-</option>
+       </select>
+       <input class="entrada" input type="number" onchange = "set_valor_a()" id="valor_a"> 
+       <span>x <sup>2</sup></span>
+
+       <select name="sinal_b" onchange = "set_sinal_b()" id="sinal_b">
+        <option selected value="+">+</option>
+        <option value="+">-</option>
+       </select>
+       <input class="entrada" input type="number" onchange = "set_valor_b()"id="valor_b"> 
+       <span>x</span>
+
+       <select name="sinal_c" onchange = "set_sinal_c()" id="sinal_c">
+        <option selected value="+">+</option>
+        <option value="+">-</option>
+       </select>
+       <input class="entrada" input type="number" onchange = "set_valor_c()"id="valor_c"> 
+       <span>= 0</span>
+
 </div>
     <div>
-        <span>&Delta; = </span>
+       Delta: <span id="delta"></span>
     </div>
     <div> 
-        <span>x<sup>'</sup> = </span> 
-        <span>x<sup>''</sup> = </span> 
+       Resultado : <span id ="raiz"></span>
     </div>
 </body>
-</html>
+</html> 
