--- a/progressao.html
+++ b/progressao.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script/script.js"></script>
+    <script src="./script/script.js"></script>
     <title>Progressoes</title>
 </head>
 <body>
     <section id="pa">
         <h1>Progressoes Aritmetica</h1>
-        P.A : a <sub>1</sub> ,a <sub>2</sub> <br>
+        P.A : a <sub>1</sub>,a <sub>2</sub>,a <sub>2</sub>,...a<sub>n</sub> <br>
         Calculo da razão: r = a <sub>2</sub> - a <sub>2</sub> <br>
         Calculo do ultimo termo (n); a <sub>n</sub> = a <sub>1</sub> . (n - 1) . r<br>
         Soma de n termos: S <sub>1</sub> (a <sub>1</sub> + a <sub>n</sub>) * (n/2)<br>
@@ -20,6 +20,21 @@
             n =  <input onchange="setpa_n()"type="number" id="pa_n"><br>
             Sequencia: <span id="pa_seq"></span>
         </div>
+        </section>
+        <section id="pg">
+         <h1>Progressão Geométrica</h1>
+         P.G. : a <sub>1</sub>,a <sub>2</sub>,a <sub>2</sub>,...a<sub>n</sub> <br>
+         Calculo da razão: r = a <sub>2</sub> / a <sub>1</sub> <br>
+         Calculo do ultimo termo (n): a <sub>n</sub> = a <sub>1</sub> . q <sup>(n - 1) </sup><br>
+        Soma de n termos: S <sub>n</sub> = (a <sub>1</sub> (q <sup>n</sup> - 1)) / (q - 1);
+
+        <div class="calculoPG">
+            a <sub>1</sub>; <input onchange="setpg_a1()" type= "number" id="pg_a1"><br>
+            r =  <input onchange="setpg_r()"type="number" id="pg_r"><br>
+            n =  <input onchange="setpg_n()"type="number" id="pg_n"><br>
+            Sequencia: <span id="pg_seq"></span>
+        </div>
+
         </section>
 </body>
 </html>
